Update link colors, fix button spacing, projects page details

--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -64,6 +64,18 @@ a:hover {
   text-decoration: none;
   transition: .3s all;
 }
+.main-content a:hover {
+  color: darken($bright, 10%);
+  text-decoration: none;
+  transition: .3s all;
+}
+
+.post-content a {
+	color: $fs-blue;
+}
+.post-content a:hover {
+	color: darken($fs-blue, 10%);
+}
 ol li,
 ul li {
   margin-top: 0px;
